--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
+    "js-cookie": "^2.2.1",
     "json-server": "^0.16.3",
     "next": "10.1.3",
     "rc-slider": "^9.7.2",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.4"
